# OmniMatch

./: .env.example  .gitignore  README.md  idea.md  pyproject.toml
app/: __init__.py  config.py  schemas.py
app/agent/: __init__.py  actions.py  dispatch_tool.py  forking.py  main_agent.py  tool_registry.py
app/api/: __init__.py  connection.py  context.py  monitor.py  server.py
app/compress/: __init__.py  breakpoint.py  compressor.py
app/eval/: __init__.py  cases.py  judge.py  rubric.py  runner.py  trace_logger.py
app/memory/: __init__.py  injector.py  store.py
app/prompt/: prompts.yml
app/providers/: __init__.py  base.py  http_product.py  http_web_search.py  openai_llm.py  placeholder.py  registry.py  serpapi_product.py  serper_web_search.py  shipping.py
app/ranking/: __init__.py  scorer.py
app/recall/: __init__.py  ann.py  tower_item.py  tower_query.py  tower_user.py
app/tools/: __init__.py  category_insight.py  chat_fallback.py  context.py  item_picker.py  item_search.py  planner.py  price_compare.py  shipping_calc.py  shopping_summary.py  web_search.py
app/utils/: __init__.py  path_utils.py  thread_ctx.py
docs/document/: 04-0-llm-three-tower-vector-recall.md  04-1-vector-infrastructure-and-opensearch.md  04-2-three-tower-training-evaluation-reranker.md
examples/: run_competition_agent.py  run_mock_agent.py
frontend/: index.html  package-lock.json  package.json
tests/: test_agent_loop.py  test_api.py  test_config.py  test_eval_runner.py  test_providers.py  test_ranking.py  test_real_provider_adapters.py  test_schemas.py  test_tools.py
(+19 files in other folders)
