[project]
name = "omnimatch"
version = "0.1.0"
description = "Runnable mock MVP for a conversational cross-platform shopping agent."
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
